# python-projects

./: .gitignore  OLD.run_cython.pyx.OLD  README.md  comments.py  log.txt  manipulate_sys-path.py  motion-test.py  pippackage-test.py  run_cython.c  setup.py  site-module.py  text.txt
class-example/: class-test.py  hello.py  this_class.py
cython-example/: run_cython.c
cython-helloworld/: README.md  cython-helloworld.md  helloworld.c  setup.py
cython-helloworld/distribution/: test-hellowolrd.py
cython-pyarmor-ex/: README.MD
cython-pyarmor-run-python copy/: setup.py
cython-run-python/: cython-run-python.md  run_cython.c  run_python.py  test_code.py
cython-run-python-vs-cython/: cython-run-python-vs-cython.md
examples/: built-in.py  class.py  function_which_greater.py  function_which_larger.py  modulus.py  test.py  test2.py
fall-det/: FALL-DET.md  test-file.py
fall-det/fdd/: README.txt
other/: packageOLD.json
pose-estimators/: cubemos.py  d2.py  main.py  pose-estimators.md  realsense.py  wrnch.py
pose-estimators/ex_0/: realsense_1.py
pose-estimators/ex_1/: get-realsense.py  realsense_device_manager.py  test_them.py
pose-estimators/ex_2/: ex_0.py  ex_1.py  examples.py
pose-estimators/ex_good/: ex_window.py  realsense_1.py  realsense_2.py
pose-estimators/wrnch/code_sample/: api.py  ui.py
pose-estimators/wrnch/wrSamples/: CMakeLists.txt
pose-estimators/wrnch/wrSamples/c/: CMakeLists.txt  activities_sample.c  pose2d_sample.c  wrOpenCvHelpers.cpp  wrOpenCvHelpers.h
pose-estimators/wrnch/wrSamples/cpp/: CMakeLists.txt
pose-estimators/wrnch/wrSamples/cpp/include/: HandWaveDetector.hpp  Quaternion.hpp  SampleUtils.hpp  Visualizer.hpp
pose-estimators/wrnch/wrSamples/cpp/src/: wrActivities_sample.cpp  wrGesture_sample.cpp  wrHands_sample.cpp  wrHead_sample.cpp  wrHello_sample.cpp  wrJointDefinitions_sample.cpp  wrPose2d_sample.cpp  wrPose3dPostIK_sample.cpp  wrPose3d_sample.cpp  wrSerialization_sample.cpp
pose-estimators/wrnch/wrSamples/python/: activities_sample.py  hands_sample.py  head_sample.py  hello_sample.py  joint_definitions_sample.py  pose2d_sample.py  pose3d_sample.py  serialization_sample.py  utils.py  visualizer.py
py-examples/: _findInList.py  amazon.py  append.py  awsQuestion2.py  functionMultiply.py  writeToCSV.py
py_examples/: csv-two-list.py  findKeyInList.py  hash.py  ifElifElseEvenOddList.py  isPathIn2DMatrix.py  lists_and_slices.py  lists_methods.py  ternary.py
py_examples/old/: README.MD  class.py  class_inheitance.py  config.yaml  constructor.py  deploy.sh  dict.py  file_handler.py  for.py  global.py  if.py  lambda.py  main.py  os.py  switch.py  test.csv  time.py  timer.py
pyarmor-cython-helloworld/: e-motion-venv-pyarmor-cython.md  foo.py  old-tests.md  pyarmor-cython-helloworld.md
pyarmor-cython-helloworld/tmp/: test.py
pyarmorCythonHello/: e-motion-venv-pyarmor-cython.md  pyarmor-cython-helloworld.md
python-examples/: TEST.py  array9x4.py  csv.py  searchList.py
real-sense-example/: README.MD
testFolder/: test-file.py
